fixed blurry images, logo still not fixed

--- a/src/style/layout/_navbar.scss
+++ b/src/style/layout/_navbar.scss
@@ -1,10 +1,3 @@
-#logo {
-  display: inline-block;
-  width: 100px;
-  height: 100px;
-  position: relative;
-}
-
 nav {
   display: flex;
   align-items: center;
@@ -13,6 +6,13 @@ nav {
   top: 0;
   left: 0;
   position: absolute;
+}
+
+#logo {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  position: relative;
 }
 
 .nav-ul {
@@ -31,7 +31,6 @@ nav {
   font-weight: bold;
   padding: 2rem;
   margin: 2rem;
-  display: block;
 
   &:hover {
     transform: translateY(-2px);
@@ -75,8 +74,8 @@ nav {
 
 // Tablet Responsiveness
 @media only screen and (max-width: 768px) {
-	.nav-ul li a {
-		padding: 1rem;
-		margin: 1rem;
-	}
+  .nav-ul li a {
+    padding: 1rem;
+    margin: 1rem;
+  }
 }
